2006-11-20  Andrew Pinski  <andrew_pinski@playstation.sony.com>

PR tree-opt/25500
        * tree-sra.c (single_scalar_field_in_record_p): New function.
        (decide_block_copy): Use it.

2006-11-20  Andrew Pinski  <andrew_pinski@playstation.sony.com>

        PR tree-opt/25500
        * gcc.dg/tree-ssa/sra-4.c: New testcase.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@119026 138bc75d-0d04-0410-961f-82ee72b054a4